--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">Android News</h1>
+      <h2 class="project-tagline">The latest news and resources about android, from all the official channels</h2>
     </header>
 
     <main id="content" class="main-content" role="main">
