--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta property="og:title" content="{{ page.title }}" />
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/dipien/dipien-component-builder/master/.github/favicon-96x96.png">
   </head>
