--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name">Android News</h1>
-      <h2 class="project-tagline">The latest news and resources about android, from all the official channels</h2>
+      <h1 class="project-name">{{ page.title }}</h1>
+      <h2 class="project-tagline">{{ page.description }}</h2>
     </header>
 
     <main id="content" class="main-content" role="main">
