--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,14 +17,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:title" content="{{ site.title }}" />
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/dipien/dipien-component-builder/master/.github/favicon-96x96.png">
+    <title>{{ site.title }}</title>
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title }}</h1>
-      <h2 class="project-tagline">{{ page.description }}</h2>
+      <h1 class="project-name">{{ site.title }}</h1>
+      <h2 class="project-tagline">{{ site.description }}</h2>
     </header>
 
     <main id="content" class="main-content" role="main">
