--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ site.description }}</h2>
+      <a href="https://androidnews.dipien.com/" class="btn">Android News</a>
+      <a href="https://dipien.github.io/android-topics/" class="btn">Android Topics</a>
     </header>
 
     <main id="content" class="main-content" role="main">
