--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ site.description }}</h2>
-      <a href="https://androidnews.dipien.com/" class="btn">Android News</a>
-      <a href="https://medium.com/android-topics" class="btn">Android Topics</a>
+      <a href="https://twitter.com/AndroidNewsOk" class="btn">Follow us on Twitter</a>
     </header>
 
     <main id="content" class="main-content" role="main">
