--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
       <h1 class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ site.description }}</h2>
       <a href="https://twitter.com/AndroidNewsOk" class="btn">Follow us on Twitter</a>
+      <a href="https://androidtopicsindex.dipien.com/" class="btn">Android Topics</a>
     </header>
 
     <main id="content" class="main-content" role="main">
